--- a/package.json
+++ b/package.json
@@ -1,25 +1,43 @@
 {
   "name": "type-proxy",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Validate data with unknown structure",
   "author": "Vivi International",
+  "homepage": "https://github.com/viviedu/type-proxy",
   "license": "MIT",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "eslint . && tsc",
-    "test": "yarn build && mocha",
+    "test": "yarn build && mocha --require ts-node/register test/**/*.ts test/**/*.js",
     "prepare": "tsc"
   },
   "files": [
     "dist/**/*"
   ],
   "devDependencies": {
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
     "mocha": "^9.1.3",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.2"
-  }
+  },
+  "keywords": [
+    "parse",
+    "parser",
+    "parsing",
+    "validate",
+    "validator",
+    "validation",
+    "unknown",
+    "typescript",
+    "combinator",
+    "json",
+    "interface",
+    "schema"
+  ]
 }
