--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
+    open-pull-requests-limit: 1 # Limit PR spam
     schedule:
-      interval: "daily"
+      interval: "weekly"
     versioning-strategy: lockfile-only
