--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,9 +5,8 @@ steps:
       queue: v6
     command: .buildkite/scripts/test.sh
     plugins:
-      - viviedu/docker-compose#dd0a3f4:
+      - docker-compose#v5.12.1:
           config: .buildkite/docker-compose.buildkite.yml
-          build: test
           image-repository: ${GLOBAL_DOCKER_REGISTRY}/build-cache
           image-name: ${BUILDKITE_PIPELINE_SLUG}-test
           cache-from: test:${GLOBAL_DOCKER_REGISTRY}/build-cache:${BUILDKITE_PIPELINE_SLUG}-test
